--- a/attendance-mcsv/requirements.txt
+++ b/attendance-mcsv/requirements.txt
@@ -1,15 +1,131 @@
+apt-listchanges==4.8
+autocommand==2.2.2
+bcrypt==5.0.0
+beautifulsoup4==4.14.2
 blinker==1.9.0
-click==8.3.0
-Flask==3.1.2
-flask-cors==6.0.1
-flask-marshmallow==1.3.0
-Flask-SQLAlchemy==3.1.1
-greenlet==3.2.4
-itsdangerous==2.2.0
+Brlapi==0.8.7
+certifi==2025.1.31
+chardet==5.2.0
+charset-normalizer==3.4.3
+click==8.2.1
+contourpy==1.3.2
+cryptography==44.0.2
+cssselect==1.3.0
+cupshelpers==1.0
+cycler==0.12.1
+dasbus==1.7
+dbus-python==1.4.0
+distlib==0.3.9
+distro==1.9.0
+distro-info==1.14
+duplicity==3.0.5.1
+fasteners==0.19
+filelock==3.18.0
+fonttools==4.58.0
+fsspec==2025.5.1
+future==1.0.0
+greenlet==3.1.0
+html5lib-modern==1.2
+httplib2==0.22.0
+idna==3.10
+inflect==7.5.0
+invoke==2.2.0
+jaraco.context==6.0.1
+jaraco.functools==4.1.0
 Jinja2==3.1.6
+joblib==1.5.1
+kiwisolver==1.4.8
+lazr.restfulclient==0.14.6
+lazr.uri==1.0.6
+libvirt-python==11.8.0
+louis==3.35.0
+lxml==6.0.2
+Mako==1.3.10.dev0
 MarkupSafe==3.0.3
-marshmallow==4.0.1
-marshmallow-sqlalchemy==1.4.2
-SQLAlchemy==2.0.43
+matplotlib==3.10.3
+monotonic==1.6
+more-itertools==10.8.0
+mpmath==1.3.0
+msgpack==1.0.3
+networkx==3.4.2
+nltk==3.9.1
+numpy==2.2.6
+nvidia-cublas-cu12==12.6.4.1
+nvidia-cuda-cupti-cu12==12.6.80
+nvidia-cuda-nvrtc-cu12==12.6.77
+nvidia-cuda-runtime-cu12==12.6.77
+nvidia-cudnn-cu12==9.5.1.17
+nvidia-cufft-cu12==11.3.0.4
+nvidia-cufile-cu12==1.11.1.6
+nvidia-curand-cu12==10.3.7.77
+nvidia-cusolver-cu12==11.7.1.2
+nvidia-cusparse-cu12==12.5.4.2
+nvidia-cusparselt-cu12==0.6.3
+nvidia-nccl-cu12==2.26.2
+nvidia-nvjitlink-cu12==12.6.85
+nvidia-nvtx-cu12==12.6.77
+oauthlib==3.3.1
+olefile==0.47
+opencv-python==4.11.0.86
+packaging==25.0
+pandas==2.2.3
+paramiko==4.0.0
+pexpect==4.9.0
+pillow==12.0.0
+pipenv==2025.0.4
+platformdirs==4.3.8
+psutil==7.1.0
+ptyprocess==0.7.0
+py-cpuinfo==9.0.0
+py4j==0.10.9.9
+pyasyncore==1.0.2
+pycairo==1.27.0
+pycups==2.0.4
+PyGObject==3.50.2
+PyHive==0.7.0
+pyinotify==0.9.6
+PyJWT==2.10.1
+PyNaCl==1.5.0
+pynvim==0.5.2
+pyparsing==3.1.3
+pysmbc==1.0.25.1
+pyspark==4.0.0
+python-apt==3.0.0
+python-dateutil==2.9.0
+python-debian==1.0.1
+python-debianbts==4.1.1
+python-magic==0.4.27
+python-pam==2.0.2
+python-xlib==0.33
+pytz==2025.2
+pyxdg==0.28
+PyYAML==6.0.2
+regex==2024.11.6
+reportbug==13.2.0
+requests==2.32.5
+scikit-learn==1.7.0
+scipy==1.15.3
+seaborn==0.13.2
+setproctitle==1.3.7
+setuptools==80.8.0
+soupsieve==2.7
+sympy==1.14.0
+threadpoolctl==3.6.0
+tinycss2==1.4.0
+torch==2.7.0
+torchvision==0.22.0
+tqdm==4.67.1
+triton==3.3.0
+typeguard==4.4.4
 typing_extensions==4.15.0
-Werkzeug==3.1.3
+tzdata==2025.2
+ultralytics==8.3.145
+ultralytics-thop==2.0.14
+urllib3==2.5.0
+vboxapi==1
+virtualenv==20.31.2
+wadllib==2.0.0
+webencodings==0.5.1
+wheel==0.46.1
+xdg==5
+xlrd==2.0.2
