--- a/attendance-mcsv/requirements.txt
+++ b/attendance-mcsv/requirements.txt
@@ -17,12 +17,13 @@ Jinja2==3.1.6
 MarkupSafe==3.0.3
 marshmallow==4.0.1
 marshmallow-sqlalchemy==1.4.2
+numpy==2.3.5
 pycparser==2.23
 PyJWT==2.10.1
 requests==2.32.5
+schedule==1.2.2
 SQLAlchemy==2.0.44
 typing_extensions==4.15.0
 urllib3==2.5.0
 Werkzeug==3.1.3
-gunicorn
-schedule
+gunicorn==22.0.0
