--- a/facedetection-mcsv/requirements.txt
+++ b/facedetection-mcsv/requirements.txt
@@ -1,110 +1,144 @@
-absl-py==2.3.1
-albucore==0.0.24
-albumentations==2.0.8
-annotated-types==0.7.0
-astunparse==1.6.3
-beautifulsoup4==4.14.2
-blinker==1.9.0
-certifi==2025.10.5
-charset-normalizer==3.4.3
-click==8.3.0
-coloredlogs==15.0.1
-contourpy==1.3.3
-cycler==0.12.1
-Cython==3.1.4
-easydict==1.13
-filelock==3.20.0
+--extra-index-url https://download.pytorch.org/whl/cpu
+
+# Web
 Flask==3.1.2
-flatbuffers==25.9.23
-fonttools==4.60.1
-fsspec==2025.9.0
-gast==0.6.0
-gdown==5.2.0
-google-pasta==0.2.0
-grpcio==1.75.1
-h5py==3.14.0
-humanfriendly==10.0
-idna==3.10
-imageio==2.37.0
-insightface==0.7.3
-itsdangerous==2.2.0
-Jinja2==3.1.6
-joblib==1.5.2
-keras==3.11.3
-kiwisolver==1.4.9
-lazy_loader==0.4
-libclang==18.1.1
-Markdown==3.9
-markdown-it-py==4.0.0
-MarkupSafe==3.0.3
-matplotlib==3.10.7
-mdurl==0.1.2
-ml_dtypes==0.5.3
-mpmath==1.3.0
-namex==0.1.0
-networkx==3.5
-numpy==2.2.6
-nvidia-cublas-cu12==12.8.4.1
-nvidia-cuda-cupti-cu12==12.8.90
-nvidia-cuda-nvrtc-cu12==12.8.93
-nvidia-cuda-runtime-cu12==12.8.90
-nvidia-cudnn-cu12==9.10.2.21
-nvidia-cufft-cu12==11.3.3.83
-nvidia-cufile-cu12==1.13.1.3
-nvidia-curand-cu12==10.3.9.90
-nvidia-cusolver-cu12==11.7.3.90
-nvidia-cusparse-cu12==12.5.8.93
-nvidia-cusparselt-cu12==0.7.1
-nvidia-nccl-cu12==2.27.5
-nvidia-nvjitlink-cu12==12.8.93
-nvidia-nvshmem-cu12==3.3.20
-nvidia-nvtx-cu12==12.8.90
-onnx==1.19.1
-onnxruntime==1.23.1
-opencv-python==4.12.0.88
-opencv-python-headless==4.12.0.88
-opt_einsum==3.4.0
-optree==0.17.0
-packaging==25.0
-pandas==2.3.3
-pillow==11.3.0
-prettytable==3.16.0
-protobuf==6.32.1
-pydantic==2.12.0
-pydantic_core==2.41.1
-Pygments==2.19.2
-pyparsing==3.2.5
-PySocks==1.7.1
-python-dateutil==2.9.0.post0
-pytz==2025.2
-PyYAML==6.0.3
-requests==2.32.5
-retina-face==0.0.17
-rich==14.2.0
-scikit-image==0.25.2
-scikit-learn==1.7.2
-scipy==1.16.2
-setuptools==80.9.0
-simsimd==6.5.3
-six==1.17.0
-soupsieve==2.8
-stringzilla==4.2.0
-sympy==1.14.0
-tensorboard==2.20.0
-tensorboard-data-server==0.7.2
-tensorflow==2.20.0
-termcolor==3.1.0
-tf_keras==2.20.1
-threadpoolctl==3.6.0
-tifffile==2025.10.4
-torch==2.9.0
-tqdm==4.67.1
-triton==3.5.0
-typing-inspection==0.4.2
-typing_extensions==4.15.0
-tzdata==2025.2
-urllib3==2.5.0
-wcwidth==0.2.14
+gunicorn==22.0.0
 Werkzeug==3.1.3
-wheel==0.45.1
-wrapt==1.17.3
+
+# PyTorch (CPU-only)
+torch==2.9.0+cpu
+torchvision==0.24.0+cpu
+torchaudio==2.9.0+cpu
+
+# TensorFlow + Keras (CPU-only)
+tensorflow-cpu==2.20.0
+tf-keras==2.20.1
+
+# Detección facial
+retina-face==0.0.17
+insightface==0.7.3
+onnxruntime==1.23.1
+opencv-python-headless==4.12.0.88
+
+# Básicos
+numpy==2.2.6
+scipy==1.16.2
+scikit-learn==1.7.2
+pillow==11.3.0
+requests==2.32.5
+PyYAML==6.0.3
+tqdm==4.67.1
+pandas==2.3.3
+
+
+# absl-py==2.3.1
+# albucore==0.0.24
+# albumentations==2.0.8
+# annotated-types==0.7.0
+# astunparse==1.6.3
+# beautifulsoup4==4.14.2
+# blinker==1.9.0
+# certifi==2025.10.5
+# charset-normalizer==3.4.3
+# click==8.3.0
+# coloredlogs==15.0.1
+# contourpy==1.3.3
+# cycler==0.12.1
+# Cython==3.1.4
+# easydict==1.13
+# filelock==3.20.0
+# Flask==3.1.2
+# flatbuffers==25.9.23
+# fonttools==4.60.1
+# fsspec==2025.9.0
+# gast==0.6.0
+# gdown==5.2.0
+# google-pasta==0.2.0
+# grpcio==1.75.1
+# h5py==3.14.0
+# humanfriendly==10.0
+# idna==3.10
+# imageio==2.37.0
+# insightface==0.7.3
+# itsdangerous==2.2.0
+# Jinja2==3.1.6
+# joblib==1.5.2
+# keras==3.11.3
+# kiwisolver==1.4.9
+# lazy_loader==0.4
+# libclang==18.1.1
+# Markdown==3.9
+# markdown-it-py==4.0.0
+# MarkupSafe==3.0.3
+# matplotlib==3.10.7
+# mdurl==0.1.2
+# ml_dtypes==0.5.3
+# mpmath==1.3.0
+# namex==0.1.0
+# networkx==3.5
+# numpy==2.2.6
+# nvidia-cublas-cu12==12.8.4.1
+# nvidia-cuda-cupti-cu12==12.8.90
+# nvidia-cuda-nvrtc-cu12==12.8.93
+# nvidia-cuda-runtime-cu12==12.8.90
+# nvidia-cudnn-cu12==9.10.2.21
+# nvidia-cufft-cu12==11.3.3.83
+# nvidia-cufile-cu12==1.13.1.3
+# nvidia-curand-cu12==10.3.9.90
+# nvidia-cusolver-cu12==11.7.3.90
+# nvidia-cusparse-cu12==12.5.8.93
+# nvidia-cusparselt-cu12==0.7.1
+# nvidia-nccl-cu12==2.27.5
+# nvidia-nvjitlink-cu12==12.8.93
+# nvidia-nvshmem-cu12==3.3.20
+# nvidia-nvtx-cu12==12.8.90
+# onnx==1.19.1
+# onnxruntime==1.23.1
+# opencv-python==4.12.0.88
+# opencv-python-headless==4.12.0.88
+# opt_einsum==3.4.0
+# optree==0.17.0
+# packaging==25.0
+# pandas==2.3.3
+# pillow==11.3.0
+# prettytable==3.16.0
+# protobuf==6.32.1
+# pydantic==2.12.0
+# pydantic_core==2.41.1
+# Pygments==2.19.2
+# pyparsing==3.2.5
+# PySocks==1.7.1
+# python-dateutil==2.9.0.post0
+# pytz==2025.2
+# PyYAML==6.0.3
+# requests==2.32.5
+# retina-face==0.0.17
+# rich==14.2.0
+# scikit-image==0.25.2
+# scikit-learn==1.7.2
+# scipy==1.16.2
+# setuptools==80.9.0
+# simsimd==6.5.3
+# six==1.17.0
+# soupsieve==2.8
+# stringzilla==4.2.0
+# sympy==1.14.0
+# tensorboard==2.20.0
+# tensorboard-data-server==0.7.2
+# tensorflow==2.20.0
+# termcolor==3.1.0
+# tf_keras==2.20.1
+# threadpoolctl==3.6.0
+# tifffile==2025.10.4
+# torch==2.9.0
+# tqdm==4.67.1
+# triton==3.5.0
+# typing-inspection==0.4.2
+# typing_extensions==4.15.0
+# tzdata==2025.2
+# urllib3==2.5.0
+# wcwidth==0.2.14
+# Werkzeug==3.1.3
+# wheel==0.45.1
+# wrapt==1.17.3
+# gunicorn==22.0.0
